uemu: core: Basic JIT v2 implementation

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -61,6 +61,9 @@ find_package(SDL3 CONFIG REQUIRED)
 # Abseil Configuration
 find_package(absl REQUIRED)
 
+# Find asmjit library
+find_package(asmjit CONFIG REQUIRED)
+
 # GDB Stub
 add_custom_target(gdbstub_build
     COMMAND ${CMAKE_MAKE_PROGRAM}
@@ -82,14 +85,30 @@ list(APPEND SOURCES ${SOFTFLOAT_SOURCES})
 
 add_library(riscv_sim_lib ${SOURCES})
 target_include_directories(riscv_sim_lib PUBLIC include ${CMAKE_SOURCE_DIR}/softfloat)
-target_link_libraries(riscv_sim_lib PUBLIC SDL3::SDL3 absl::base absl::flat_hash_map absl::hash)
+target_link_libraries(riscv_sim_lib PUBLIC 
+    SDL3::SDL3 
+    absl::base 
+    absl::flat_hash_map 
+    absl::hash
+    asmjit::asmjit
+)
 set_property(TARGET riscv_sim_lib PROPERTY INTERPROCEDURAL_OPTIMIZATION TRUE)
 add_dependencies(riscv_sim_lib gdbstub_build)
 
 # Create the main executable.
 file(GLOB_RECURSE APP_SOURCES "src/main.c" "src/main.cpp")
 add_executable(uemu ${APP_SOURCES})
-target_link_libraries(uemu PRIVATE riscv_sim_lib pthread m ${GDBSTUB_LIB} SDL3::SDL3 absl::base absl::flat_hash_map absl::hash)
+target_link_libraries(uemu PRIVATE 
+    riscv_sim_lib 
+    pthread 
+    m 
+    ${GDBSTUB_LIB} 
+    SDL3::SDL3 
+    absl::base 
+    absl::flat_hash_map 
+    absl::hash
+    asmjit::asmjit
+)
 target_include_directories(uemu PRIVATE include)
 set_property(TARGET uemu PROPERTY INTERPROCEDURAL_OPTIMIZATION TRUE)
 
@@ -204,7 +223,16 @@ FetchContent_MakeAvailable(googletest)
 # Find all your test source files.
 file(GLOB_RECURSE TEST_SOURCES "tests/*.c" "tests/*.cpp")
 add_executable(run_tests ${TEST_SOURCES})
-target_link_libraries(run_tests PRIVATE riscv_sim_lib GTest::gtest_main ${GDBSTUB_LIB} SDL3::SDL3 absl::base absl::flat_hash_map absl::hash)
+target_link_libraries(run_tests PRIVATE 
+    riscv_sim_lib 
+    GTest::gtest_main 
+    ${GDBSTUB_LIB} 
+    SDL3::SDL3 
+    absl::base 
+    absl::flat_hash_map 
+    absl::hash
+    asmjit::asmjit
+)
 target_include_directories(run_tests PRIVATE include)
 
 # Add the test executable to CTest's list of tests.
